--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li class="services">Services</li>
             <li class="projects">Project</li>
             <li class="contact">CONTACT</li>
+            <img class="humburger" src="images/icon-hamburger.svg" alt="">
           </ul>
         </nav>
       </header>
@@ -63,8 +64,8 @@
         </div>
       </div>
 
-      <div style="flex-direction: row-reverse" class="image-box">
-        <div style="position: relative; right: 106px" class="about-heading-box">
+      <div style="flex-direction: row-reverse" class="image-box im">
+        <div style="position: relative; right: 106px;" class="about-heading-box b">
           <h1 class="heading2">Stand out to the right audience</h1>
           <p class="paragraph1">
             Using a collaborative formula of designers, researchers,
@@ -76,7 +77,7 @@
           >
         </div>
         <div style="margin-right: 129px; margin-top: -4px" class="image-s">
-          <img src="images/desktop/image-stand-out.jpg" alt="" />
+          <img class="i" src="images/desktop/image-stand-out.jpg" alt="" />
         </div>
       </div>
     </section>
