--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             photographers, videographers, and copywriters, we’ll build and
             extend your brand in digital places.
           </p>
-          <a style="border-bottom: 5px solid #ff7062" href="" class="a1"
+          <a style="border-bottom: 5px solid #ff7062" href="" class="a1 a"
             >Learn More</a
           >
         </div>
