--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
     <section class="project">
       <div class="project-1">
         <h1 class="heading-project">Graphic design</h1>
-        <p class="paragraph-project">
+        <p class="paragraph-project p2">
           Great design makes you memorable. We deliver artwork that underscores
           your brand message and captures potential clients’ attention.
         </p>
       </div>
       <div class="project-2">
         <h1 class="heading-project">Photography</h1>
-        <p class="paragraph-project">
+        <p class="paragraph-project p2">
           Increase your credibility by getting the most stunning, high-quality
           photos that improve your business image.
         </p>
